[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "UniGrammarRuntimeCore"
authors = [{name = "KOLANICH"}]
description = "The core of framework for runtime for UniGrammar. Can be used by third-party tools not using UniGrammar, but when it is desireable to make integration with UniGrammar easier."
readme = "ReadMe.md"
keywords = ["grammars", "UniGrammar"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Security",
	"Topic :: Text Processing",
]
requires-python = ">=3.4"
dynamic = ["version"]

[project.urls]
Homepage = "https://codeberg.org/UniGrammar/UniGrammarRuntimeCore.py"

[tool.setuptools]
zip-safe = true
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
